ci/concourse/infra/concourse-namespace.yaml
---
  apiVersion: v1
  kind: Namespace
  metadata:
    labels:
      kubernetes.io/metadata.name: ci
    name: ci
  spec:
    finalizers:
    - kubernetes
