ci/concourse/infra/concourse-workers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  concourse-worker
  namespace: ci
  labels:
    app:  concourse-worker
spec:
  selector:
    matchLabels:
      app: concourse-worker
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  concourse-worker
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  concourse-worker
        image:  "concourse/concourse:7.8.2-ubuntu-20220725"
        args: ["worker"]
        securityContext:
          privileged: true
        resources:
          requests:
            cpu: 100m
            memory: 500Mi
          limits:
            cpu: 100m
            memory: 500Mi
        ports:
        - containerPort:  2222
          name:  con-worker
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
        - name: hostkeypub
          mountPath: "/opt/hostkeypub"
          readOnly: true
        - name: workerkeypriv
          mountPath: "/opt/workerkey"
          readOnly: true

      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/Pacific/Aucklland
        - name: hostkeypub
          secret:
            secretName: tsa-host-public
            optional: false
        - name: workerkeypriv
          secret:
            secretName: worker-private
            optional: false
      restartPolicy: Always
