ci/concourse/infra/concourse-postgress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: concourse-main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
      - name: postgres-pv-storage
        persistentVolumeClaim:
          claimName: postgres-pv-claim
      containers:
      - name: postgres
        image: postgres:11
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-pv-storage
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: concourse-main
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
  - port: 5432
  selector:
    app: postgres
