ci/concourse/infra/concourse-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  concourse-web
  namespace: ci
  labels:
    app:  concourse-web
spec:
  selector:
    matchLabels:
      app: concourse-web
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  concourse-web
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  concourse-web
        image:  "concourse/concourse:7.8.2-ubuntu-20220725"
        args: ["web"]
        resources:
          requests:
            cpu: 1000m
            memory: 2000Mi
          limits:
            cpu: 1000m
            memory: 2000Mi
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /_status/healthz
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  443
          name:  concourse-web
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
        - name: keys
          mountPath: "/opt/keys"
          readOnly: true
        - name: hostkey
          mountPath: "/opt/hostkeys"
          readOnly: true
        - name: sessionsign
          mountPath: "/opt/session-signing"
          readOnly: true
      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
        - name: keys
          secret:
            secretName: worker-public
            optional: false
        - name: hostkey
          secret:
            secretName: tsa-host-private
            optional: false
        - name: sessionsign
          secret:
            secretName: session-signing
            optional: false

      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: concourse-web-service
  namespace: ci
spec:
  selector:
    app: concourse-web
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: cws
    protocol: TCP
    port: 8443
    targetPort: 443
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
  - name: cwws
    protocol: TCP
    port: 2222
    targetPort: 2222
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
