ci/concourse/infra/concourse-ingress.yaml
---
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: concource-ingress
    namespace: concourse-main
  spec:
    ingressClassName: nginx-default
    rules:
    - host: concourse.info
      http:
        paths:
          - path: /cc/
            pathType: Prefix
            backend:
              service:
                name: concourse-web-service
                port:
                  number: 8080
